PORTALS-3021 - Fix error handling. Fix one egregious style issue where text was hard to read

--- a/packages/synapse-react-client/src/style/components/synapse_form_wrapper/_synapse-form-wrapper.scss
+++ b/packages/synapse-react-client/src/style/components/synapse_form_wrapper/_synapse-form-wrapper.scss
@@ -255,8 +255,8 @@
 
     .help-block {
       font-style: italic;
-      font-weight: lighter;
-      font-size: 1.25rem;
+      font-weight: 400;
+      font-size: 14px;
     }
 
     &.no-help .help-block {
